# wall-broadcaster

./: .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: ci-opensuse.yml
dbus/: meson.build  org.opensuse.WallBroadcast.conf  org.opensuse.WallBroadcaster.conf
desktop/: meson.build  wall-bcst-gateway.desktop  wall-bcst-watcher.desktop
include/: basics.h
man/: meson.build  wall-bcst-gateway.1.xml  wall-bcst-send.1.xml  wall-bcst-watcher-gtk4.1.xml  wall-bcst-watcher.1.xml  wall-broadcaster.8.xml
src/: a.out  varlink-org.openSUSE.wall-broadcaster.c  varlink-org.openSUSE.wall-broadcaster.h  wall-bcst-gateway.c  wall-bcst-send.c  wall-bcst-watcher-gtk4.c  wall-bcst-watcher.c  wall-broadcaster-varlink.c  wall-broadcaster.c  wall-broadcaster.h
units/: meson.build  wall-broadcaster.service
